--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,11 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.4.7", features = ["derive"] }
 futures = "0.3.29"
-rdkafka = "0.34.0"
+rdkafka = { version = "0.34.0", features = [
+  "ssl-vendored",
+  "gssapi",
+  "libz",
+  "zstd",
+] }
 serde_json = "1.0.108"
-tokio = {version = "1.33.0", features = ["full"]}
-
+tokio = { version = "1.33.0", features = ["full"] }
