--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -15,6 +15,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Install Packages
+      run: sudo apt-get install -y libsasl2-dev
     - uses: actions/checkout@v3
     - name: Format
       run: cargo fmt --check
