--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-futures = "0.3"
 clap = { version = "4.5", features = ["derive"] }
+do-notation = "0.1.3"
+futures = "0.3"
+openssl = "0.10"
 rdkafka = { version = "0.36", features = [
   "ssl-vendored",
   "gssapi",
