add rustfmt, clippy to workflows

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -19,6 +19,8 @@ jobs:
       run: sudo apt-get install -y libsasl2-dev
     - uses: actions/checkout@v3
     - uses: dtolnay/rust-toolchain@stable
+      with:
+        components: rustfmt, clippy
     - name: Format
       run: cargo fmt --check
     - name: Build
