--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -15,13 +15,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Install Packages
-      run: sudo apt-get install -y libsasl2-dev
     - uses: actions/checkout@v3
     - uses: dtolnay/rust-toolchain@master
       with:
         toolchain: "1.85"
         components: rustfmt, clippy
+    - name: Install Packages
+      run: sudo apt-get install -y libsasl2-dev
+    - name: Check Rust version
+      run: cargo --version && rustc --version
     - name: Format
       run: cargo fmt --check
     - name: Build
