--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,9 +16,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - uses: dtolnay/rust-toolchain@master
+    - uses: actions-rust-lang/setup-rust-toolchain@v1
       with:
-        toolchain: "1.85"
+        toolchain: stable
         components: rustfmt, clippy
     - name: Install Packages
       run: sudo apt-get install -y libsasl2-dev
